--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: "Segoe UI", Tahoma, sans-serif;
-      background: #f9fafb;
+      background: #000509;
       color: #1f2937;
       line-height: 1.6;
     }
@@ -16,7 +16,7 @@
       padding: 2rem;
       text-align: center;
       background: #3b82f6;
-      color: white;
+      color: rgb(3, 0, 39);
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
     .bloque {
