--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     header {
       padding: 2rem;
       text-align: center;
-      background: #3b82f6;
+      background: #000d22;
       color: rgb(3, 0, 39);
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
@@ -24,7 +24,7 @@
       max-width: 700px;
       padding: 1.5rem;
       border-radius: 12px;
-      background: white;
+      background: rgb(2, 0, 27);
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
     .bloque h2 {
@@ -40,7 +40,7 @@
       margin: 0 auto;
       padding: 3rem 1rem;
       text-align: center;
-      border-top: 2px solid #93c5fd;
+      border-top: 2px solid #000d1d;
     }
     button {
       padding: 1rem 1.5rem;
@@ -54,7 +54,7 @@
       transition: transform 0.2s ease, background 0.2s ease;
     }
     button:disabled {
-      background: #9ca3af;
+      background: #000815;
       cursor: not-allowed;
       box-shadow: none;
     }
